change for work filed of css

--- a/index.html
+++ b/index.html
@@ -1,87 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ding's Site-home</title>
     <link rel="stylesheet" href="css/stylesheet.css">
 
 </head>
+
 <body>
 
-<header>
-<nav>
-    <p>About Me</p>
-    <p>My Work</p>
-    <p>Contact Me</p>
-</nav>
+    <header>
+        <nav class="Nac_bar">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Work</li>
+                <li>Contact Me</li>
+            </ul>
+        </nav>
+    </header>
 
-    <section class="intro_header">
-        <p>
-            <h1>Hello! I am Dingyu 
-            </h1>
-        </p>
-        <p>Your future Web designer. </p>
-    </section>
-</header>
+    <main>
+        <div class="hello_header">
+        
+            <h1>Hello! I am Dingyu</h1>
+        </div>
 
-<main>
-    <section class="intro_mywork">
-        <p>
+        <div class="intor_about">
+            <p>
+            <h1>A Future Web Designer & Graphic Designer</h1>
+            <h2>Get Know More About Me --></h2>
+            </p>
+        </div>
+        <div class="intro_mywork">
+            <p>
             <h1>My Work</h1>
-        </p>
-        <section class="work-item">
-            <img src="" alt="">
-            <p>
+            </p>
+            <section class="work-item">
+                <img src="" alt="">
+                <p>
                 <h4>Graphic Design</h4>
-            </p>
-            <p>
-         multi-nodal Chinese population
-                distribution. These Chinese are predominantly first
-                generation immigrants or the children of post-1965
-                immigrants, and more and more of them are living
-                outside traditional Chinatowns. The suburban
-                Chinese population of cities such as San Francisco,
-                Los Angeles, and New York has grown
-                tremendously. To understand this distribution we
-                must focus not only on the geography of the United
-                States, but on the culture of and the links to regions
-                in China, Hong
-            </p>
-          
+                </p>
+                <p>
+                    multi-nodal Chinese population
+                    distribution. These Chinese are predominantly first
+                    generation immigrants or the children of post-1965
+                    immigrants, and more and more of them are living
+                    outside traditional Chinatowns. The suburban
+                    Chinese population of cities such as San Francisco,
+                    Los Angeles, and New York has grown
+                    tremendously. To understand this distribution we
+                    must focus not only on the geography of the United
+                    States, but on the culture of and the links to regions
+                    in China, Hong
+                </p>
 
-        </section>
 
-        <section class="work-item">
-            <img src="" alt="">
-            <p>
+            </section>
+
+            <section class="work-item">
+                <img src="" alt="">
+                <p>
                 <h4>Project</h4>
-            </p>
+                </p>
+                <p>
+                    multi-nodal Chinese population
+                    distribution. These Chinese are predominantly first
+                    generation immigrants or the children of post-1965
+                    immigrants, and more and more of them are living
+                    outside traditional Chinatowns. The suburban
+                    Chinese population of cities such as San Francisco,
+                    Los Angeles, and New York has grown
+                    tremendously.
+                </p>
+
+            </section>
+
+        </div>
+        <section class="contactme">
             <p>
-            multi-nodal Chinese population
-distribution. These Chinese are predominantly first
-generation immigrants or the children of post-1965
-immigrants, and more and more of them are living
-outside traditional Chinatowns. The suburban
-Chinese population of cities such as San Francisco,
-Los Angeles, and New York has grown
-tremendously. 
-            </p>
-
-        </section>
-
-    </section>
-    <section class="contactme">
-        <p>
             <h1>Contact Me</h1>
-        </p>
-        <img src="" alt="">
-    </section>
-</main>
-<footer>
+            </p>
+            <img src="" alt="">
+        </section>
+    </main>
+    <footer>
 
-</footer>
+    </footer>
 
 </body>
+
 </html>
