About page change

--- a/about.html
+++ b/about.html
@@ -9,30 +9,37 @@
     <title>Ding's Site-about</title>
 </head>
 <div class="about_warpper">
-    <nav class="Nac_bar">
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Work</li>
-            <li>Contact Me</li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="nac_bar">
+            <ul class="navbar">
+                <li class="nav_logo">Logo</li>
+                <li class="nav_home">Home</li>
+                <li class="nav_about">About</li>
+                <li class="nav_work">Work</li>
+                <li class="nav_contact">Contact Me</li>
+            </ul>
+        </nav>
+    </header>
 
-    <body >
-        <section class="aboutme_info">
-            <img src="images/default.jpeg" alt="default">
-            <p>
-            <h4>Name: Dingyu Wang</h4>
+    <body>
+        <div class="aboutme_info">
+
+            <div class="aboutme_pic"><img src="images/default.jpeg" alt="default">
+            </div>
+<div class="aboutme_name">
+            <h4 >Name: Dingyu Wang</h4>
             <h4>Major: Multimedia Programming and De</h4>
             <h4>This is intorduction of my graphic design. Art is most attractive things in this world. And what’s
                 different betweent art and design.
                 I think design is a effact way to express your idea or you thouht about this world.
                 Design is the my most passtion about.</h4>
 
-            </p>
-        </section>
-
+            </div>
+        </div>
     </body>
 </div>
+<footer>
+
+</footer>
 
 </html>
