--- a/index.html
+++ b/index.html
@@ -9,83 +9,83 @@
     <link rel="stylesheet" href="css/stylesheet.css">
 
 </head>
+<header>
+    <nav class="nac_bar">
+        <ul class="navbar">
+            <li class="nav_logo">Logo</li>
+            <li class="nav_home">Home</li>
+            <li class="nav_about">About</li>
+            <li class="nav_work">Work</li>
+            <li class="nav_contact">Contact Me</li>
+        </ul>
+    </nav>
+</header>
 
 <body>
 
-    <header>
-        <nav class="Nac_bar">
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Work</li>
-                <li>Contact Me</li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <div class="hello_header">
-        
-            <h1>Hello! I am Dingyu</h1>
-        </div>
+    <div class="hello_header">
 
-        <div class="intor_about">
-            <p>
-            <h1>A Future Web Designer & Graphic Designer</h1>
-            <h2>Get Know More About Me --></h2>
-            </p>
-        </div>
-        <div class="intro_mywork">
-            <p>
-            <h1>My Work</h1>
-            </p>
-            <section class="work-item">
-                <img src="" alt="">
-                <p>
-                <h4>Graphic Design</h4>
-                </p>
-                <p>
-                    multi-nodal Chinese population
-                    distribution. These Chinese are predominantly first
-                    generation immigrants or the children of post-1965
-                    immigrants, and more and more of them are living
-                    outside traditional Chinatowns. The suburban
-                    Chinese population of cities such as San Francisco,
-                    Los Angeles, and New York has grown
-                    tremendously. To understand this distribution we
-                    must focus not only on the geography of the United
-                    States, but on the culture of and the links to regions
-                    in China, Hong
-                </p>
+        <h1>Hello! I am Dingyu</h1>
+    </div>
 
-
-            </section>
-
-            <section class="work-item">
-                <img src="" alt="">
-                <p>
-                <h4>Project</h4>
-                </p>
-                <p>
-                    multi-nodal Chinese population
-                    distribution. These Chinese are predominantly first
-                    generation immigrants or the children of post-1965
-                    immigrants, and more and more of them are living
-                    outside traditional Chinatowns. The suburban
-                    Chinese population of cities such as San Francisco,
-                    Los Angeles, and New York has grown
-                    tremendously.
-                </p>
-
-            </section>
-
-        </div>
-        <section class="contactme">
-            <p>
-            <h1>Contact Me</h1>
-            </p>
+    <div class="intor_about">
+        <p>
+        <h1>A Future Web Designer & Graphic Designer</h1>
+        <h2>Get Know More About Me --></h2>
+        </p>
+    </div>
+    <div class="intro_mywork">
+        <p>
+        <h1>My Work</h1>
+        </p>
+        <section class="work-item">
             <img src="" alt="">
+            <p>
+            <h4>Graphic Design</h4>
+            </p>
+            <p>
+                multi-nodal Chinese population
+                distribution. These Chinese are predominantly first
+                generation immigrants or the children of post-1965
+                immigrants, and more and more of them are living
+                outside traditional Chinatowns. The suburban
+                Chinese population of cities such as San Francisco,
+                Los Angeles, and New York has grown
+                tremendously. To understand this distribution we
+                must focus not only on the geography of the United
+                States, but on the culture of and the links to regions
+                in China, Hong
+            </p>
+
+
         </section>
+
+        <section class="work-item">
+            <img src="" alt="">
+            <p>
+            <h4>Project</h4>
+            </p>
+            <p>
+                multi-nodal Chinese population
+                distribution. These Chinese are predominantly first
+                generation immigrants or the children of post-1965
+                immigrants, and more and more of them are living
+                outside traditional Chinatowns. The suburban
+                Chinese population of cities such as San Francisco,
+                Los Angeles, and New York has grown
+                tremendously.
+            </p>
+
+        </section>
+
+    </div>
+    <section class="contactme">
+        <p>
+        <h1>Contact Me</h1>
+        </p>
+        <img src="" alt="">
+    </section>
     </main>
     <footer>
 
