--- a/work.html
+++ b/work.html
@@ -9,12 +9,13 @@
     <title>Ding's Site-Work</title>
 </head>
 <header>
-    <nav class="Nac_bar">
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Work</li>
-            <li>Contact Me</li>
+    <nav class="nac_bar">
+        <ul class="navbar">
+            <li class="nav_logo">Logo</li>
+            <li class="nav_home">Home</li>
+            <li class="nav_about">About</li>
+            <li class="nav_work">Work</li>
+            <li class="nav_contact">Contact Me</li>
         </ul>
     </nav>
 </header>
