--- a/about.html
+++ b/about.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="CSS/stylesheet.css">
     <title>Ding's Site-about</title>
 </head>
-<div class="about_warpper">
-    <header>
-        <nav class="nac_bar">
-            <ul class="navbar">
-                <li class="nav_logo">Logo</li>
-                <li class="nav_home">Home</li>
-                <li class="nav_about">About</li>
-                <li class="nav_work">Work</li>
-                <li class="nav_contact">Contact Me</li>
-            </ul>
-        </nav>
-    </header>
+
+<header>
+    <nav class="nac_bar">
+        <ul class="navbar">
+            <li class="nav_logo"><a href="index.html">Logo</a></li>
+            <li class="nav_home"><a href="index.html">Home</a></li>
+            <li class="nav_about"><a href="about.html">About</a></li>
+            <li class="nav_work"><a href="work.html">Work</a></li>
+            <li class="nav_contact"><a>Contact Me</a></li>
+        </ul>
+    </nav>
+</header>      
+    <div class="about_warpper">
 
     <body>
         <div class="aboutme_info">
