--- a/work.html
+++ b/work.html
@@ -11,16 +11,16 @@
 <header>
     <nav class="nac_bar">
         <ul class="navbar">
-            <li class="nav_logo">Logo</li>
-            <li class="nav_home">Home</li>
-            <li class="nav_about">About</li>
-            <li class="nav_work">Work</li>
-            <li class="nav_contact">Contact Me</li>
+            <li class="nav_logo"><a href="index.html">Logo</a></li>
+            <li class="nav_home"><a href="index.html">Home</a></li>
+            <li class="nav_about"><a href="about.html">About</a></li>
+            <li class="nav_work"><a href="work.html">Work</a></li>
+            <li class="nav_contact"><a>Contact Me</a></li>
         </ul>
     </nav>
 </header>
 
-<body class="work_warrper">
+<div class="work_warrper">
     <section class="about_title">
         <div class="work1_box"></div>
         <h1 class="header_mywork">Some of My Work</h1>
@@ -86,7 +86,7 @@
             </div>
         </section>
     </section>
-</body>
+</div>
 <footer>
 
 </footer>
