--- a/about.html
+++ b/about.html
@@ -6,41 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/stylesheet.css">
-    <title>Ding's Site-about</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500;600;700&family=Fira+Sans&display=swap" rel="stylesheet">
+ <title>Ding's Site-about</title>
 </head>
 
-<header>
-    <nav class="nac_bar">
-        <ul class="navbar">
-            <li class="nav_logo"><a href="index.html">Logo</a></li>
-            <li class="nav_home"><a href="index.html">Home</a></li>
-            <li class="nav_about"><a href="about.html">About</a></li>
-            <li class="nav_work"><a href="work.html">Work</a></li>
-            <li class="nav_contact"><a>Contact Me</a></li>
-        </ul>
-    </nav>
-</header>      
-    <div class="about_warpper">
-
     <body>
-        <div class="aboutme_info">
-
-            <div class="aboutme_pic"><img src="images/default.jpeg" alt="default">
-            </div>
-<div class="aboutme_name">
-            <h4 >Name: Dingyu Wang</h4>
-            <h4>Major: Multimedia Programming and De</h4>
-            <h4>This is intorduction of my graphic design. Art is most attractive things in this world. And what’s
+<header>
+  <nav  class="topnav" id="myTopnav">
+    <ul>
+      <li><h1><a href="index.html">Ding's Site</a></h1></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="work.html">My Work</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">&#9776;</a></li>
+    </ul>
+  </nav>
+</header>     
+<div class="left-sidebar" contenteditable>Left Sidebar</div>
+<main>
+ <div class="card1">
+        <h1 class="card1title">Name: Dingyu Wang</h1>
+        <div class="card1image"><img src="images/default.jpeg" alt=""> </div>
+        <p class="Card1_subtitle">Major: Multimedia Programming and Design</p>
+        <div class="card1content">
+        <p >This is intorduction of my graphic design. Art is most attractive things in this world. And what’s
                 different betweent art and design.
                 I think design is a effact way to express your idea or you thouht about this world.
-                Design is the my most passtion about.</h4>
-
-            </div>
+                Design is the my most passtion about.</p>
         </div>
-    </body>
+
 </div>
+</main>
+    <div class="right-sidebar" contenteditable>Right Sidebar</div>
+
 <footer>
-
 </footer>
-
+    </body>
 </html>
