--- a/work.html
+++ b/work.html
@@ -6,18 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/stylesheet.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500;600;700&family=Fira+Sans&display=swap" rel="stylesheet">
     <title>Ding's Site-Work</title>
 </head>
 <header>
-    <nav class="nac_bar">
-        <ul class="navbar">
-            <li class="nav_logo"><a href="index.html">Logo</a></li>
-            <li class="nav_home"><a href="index.html">Home</a></li>
-            <li class="nav_about"><a href="about.html">About</a></li>
-            <li class="nav_work"><a href="work.html">Work</a></li>
-            <li class="nav_contact"><a>Contact Me</a></li>
-        </ul>
-    </nav>
+  <nav  class="topnav" id="myTopnav">
+    <ul>
+      <li><h1><a href="index.html">Ding's Site</a></h1></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="work.html">My Work</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li class="icon"><a href="javascript:void(0);" onclick="myFunction()">&#9776;</a></li>
+    </ul>
+  </nav>
 </header>
 
 <div class="work_warrper">
