--- a/work.html
+++ b/work.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500;600;700&family=Fira+Sans&display=swap" rel="stylesheet">
     <title>Ding's Site-Work</title>
 </head>
+<body>
 <header>
   <nav  class="topnav" id="myTopnav">
     <ul>
@@ -25,11 +26,9 @@
 
 <div class="work_warrper">
     <section class="about_title">
-        <div class="work1_box"></div>
+
         <h1 class="header_mywork">Some of My Work</h1>
 
-
-        <div class="work2_box"></div>
 
     </section>
 
@@ -93,5 +92,7 @@
 <footer>
 
 </footer>
+
+</body>
 
 </html>
