--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="home_intro">
         <h1 class="hello_title">Hi! I am Dingyu</h1>
         <h2>Your Future Web & Graphic Designer</h2>
-        <div class="picding"><img src="images/DingyuPhoto.png" alt="Girl in a jacket" width="500" height="600"></div>
+        <div class="picding"><img src="images/DingyuPhoto.png" alt="Girl with jacket"></div>
         <h2>Get Know More About Me --></h2>
     </div>
 
