--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
   </nav>
 </header>
 
-<div class="work_warrper">
+<main class="work_warrper">
     <section class="about_title">
 
         <h1 class="header_mywork">Some of My Work</h1>
@@ -44,7 +44,7 @@
                 I think design is a effact way to express your idea or you thouht about this world.</h4>
             </p>
             <div class="img_work">
-                <img src="images/default.jpeg" alt="default">
+                <img src="images/flower.png" alt="default">
             </div>
         </section>
 
@@ -88,7 +88,7 @@
             </div>
         </section>
     </section>
-</div>
+</main>
 <footer>
 
 </footer>
