--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     </ul>
   </nav>
 </header>     
-<div class="left-sidebar" contenteditable>Left Sidebar</div>
+<div class="left-sidebar" contenteditable></div>
 <main>
  <div class="card1">
         <h1 class="card1title">Name: Dingyu Wang</h1>
@@ -36,7 +36,7 @@
 
 </div>
 </main>
-    <div class="right-sidebar" contenteditable>Right Sidebar</div>
+    <div class="right-sidebar" contenteditable></div>
 
 <footer>
 </footer>
