--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
   </nav>
 </header>
-<div class="left-sidebar" contenteditable>Left Sidebar</div>
+<div class="left-sidebar" contenteditable></div>
 
 <main>
     <div class="home_intro">
@@ -71,7 +71,7 @@ I think design is a effact way to express your idea or you thouht about this wor
         </div>
 
     </main>
-    <div class="right-sidebar" contenteditable>Right Sidebar</div>
+    <div class="right-sidebar" contenteditable></div>
 
 
     <footer>
