--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ding's Site-home</title>
-    <link rel="stylesheet" href="CSS/navstyle.css">
+    <link rel="stylesheet" href="css/navstyle.css">
     <script src="nav.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
