--- a/work.html
+++ b/work.html
@@ -37,10 +37,11 @@
         <h2 class="sub_title"> Graphic & Art</h2>
 
         <section class="work_1">
-            <h2>This is title</h2>
-            <h4>This is intorduction of my graphic design. Art is most attractive things in this world. And what’s
-                different betweent art and design.
-                I think design is a effact way to express your idea or you thouht about this world.</h4>
+            <h2>Free sunflowers</h2>
+            <h3>Sunflowers represent positive attitudes to a better life. 
+            This is my graphic design, sunflower in the bottle. The pink background makes the picture more soft, 
+            sunflower, growing in different directions. 
+            Blue bottle and pink background form a soft contrast.</h3>
             <div class="img_work">
                 <img src="images/flower.png" alt="default">
             </div>
@@ -48,13 +49,13 @@
 
         <section class="work_2">
             <p>
-            <h2>This is title</h2>
-            <h4>This is intorduction of my graphic design. Art is most attractive things in this world. And what’s
-                different betweent art and design.
-                I think design is a effact way to express your idea or you thouht about this world.</h4>
+            <h2>Fruits and bowl</h2>
+            <h3>This is my other flat design, fruit basket and fruit. It is done using the Illustrator software.
+             I use strong contrast to reflect the characteristics of different fruits, 
+            and the highlight shadows in the form of color block make objects more stereo.</h3>
             </p>
             <div class="img_work">
-                <img src="images/default.jpeg" alt="default">
+                <img src="images/fruitbowlWithFruit.png" alt="fruitbow">
             </div>
         </section>
 
