--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
     <section class="graphic_project">
 
         <h2 class="sub_title"> Graphic & Art</h2>
-
+        <div id="graphic"></div>
         <section class="work_1">
             <h2>Free sunflowers</h2>
             <h3>Sunflowers represent positive attitudes to a better life. 
@@ -63,16 +63,16 @@
 
     <section class="study_project">
         <h2 class="sub_title2"> Study Project</h2>
-
+        <div id="study"></div>
         <section class="work_1">
             <p>
-            <h2>This is title</h2>
-            <h4>This is intorduction of my graphic design. Art is most attractive things in this world. And what’s
-                different betweent art and design.
-                I think design is a effact way to express your idea or you thouht about this world.</h4>
+            <h2>Loading Screen</h2>
+            <h4>This is the loading interface I made through Figma.
+            I want to present a vibrant animation, through the rotation of the circle and the change of the background, 
+            to make the loading screen more interesting</h4>
             </p>
             <div class="img_work">
-                <img src="images/default.jpeg" alt="default">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4KHJGOJLS5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <section class="work_2">
