--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 class="hello_title">Hi! I am Dingyu</h1>
         <h2>Your Future Web & Graphic Designer</h2>
         <div class="picding"><img src="images/DingyuPhoto.png" alt="Girl in a jacket" width="500" height="600"></div>
-        <h2>Get Know More About Me --></h2>
+        <h2><a href="/about.html">Get Know More About Me --></a></h2>
     </div>
 
     <div class="intro_mywork">
@@ -44,16 +44,15 @@
         <div class="card1content">
         <p >This is intorduction of my graphic design. Art is most attractive things in this world. And what’s different betweent art and design. 
 I think design is a effact way to express your idea or you thouht about this world.</p>
-        <p class="more-mywork">More about my work--></p>
+        <p class="more-mywork"><a href="/work.html#graphic">More about my work--></a></p>
         </div>
     </div>
        <div class="card1">
-        <h1 class="card1title">Project</h1>
-        <div class="card1image"><img src="images/default.jpeg" alt=""> </div>
+        <h1 class="card1title">Study Project</h1>
+        <div class="card1image"><iframe width="560" height="315" src="https://www.youtube.com/embed/4KHJGOJLS5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
         <div class="card1content">
-        <p >This is intorduction of my graphic design. Art is most attractive things in this world. And what’s different betweent art and design. 
-I think design is a effact way to express your idea or you thouht about this world.</p>
-        <p class="more-mywork">More about my work--></p>
+        <p >This part mainly demonstrates this semester learning project, such as UI and UX's initial learning. </p>
+        <p class="more-mywork"><a href="/work.html#study">More about my work--></a></p>
         </div>
     </div>
 
