--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
     </div>
 
     <div class="card1">
-        <h1 class="card1title">Graphic Design</h1>
-        <div class="card1image"><img src="images/default.jpeg" alt=""> </div>
+        <h1 class="card1title">Free sunflowers</h1>
+        <div class="card1image"><img src="images/flower.png" alt=""> </div>
         <div class="card1content">
-        <p >This is intorduction of my graphic design. Art is most attractive things in this world. And what’s different betweent art and design. 
-I think design is a effact way to express your idea or you thouht about this world.</p>
+        <p >Sunflowers represent positive attitudes to a better life. 
+            This is my graphic design, sunflower in the bottle. The pink background makes the picture more soft, 
+            sunflower, growing in different directions. 
+            Blue bottle and pink background form a soft contrast.</p>
         <p class="more-mywork"><a href="/work.html#graphic">More about my work--></a></p>
         </div>
     </div>
@@ -64,6 +66,9 @@ I think design is a effact way to express your idea or you thouht about this wor
          <div class="contact-right">
         
             <h1 class="contactme">Contact Me</h1>
+            <h2 class="media">Instagram:@dingfish_w</h2>
+            <h2 class="media">Facebook:dingyu.wang</h2>
+            <h2 class="media">Email: Dingyuwang0102@gmail.com</h2>
          </div>
 
            
