--- a/work.html
+++ b/work.html
@@ -72,18 +72,21 @@
             to make the loading screen more interesting</h4>
             </p>
             <div class="img_work">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/4KHJGOJLS5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="auto" height="600" src="https://www.youtube.com/embed/4KHJGOJLS5M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <section class="work_2">
             <p>
-            <h2>This is title</h2>
-            <h4>This is intorduction of my graphic design. Art is most attractive things in this world. And what’s
-                different betweent art and design.
-                I think design is a effact way to express your idea or you thouht about this world.</h4>
+            <h2>UI design "On Track"</h2>
+            <h4>On Track is a calendar tool for CUNY Students. 
+            Determined to simplify the time management of students and improve the efficiency of communication between students. 
+            This APP pursues a simple and efficient interface. Simplify the steps of setting up the calendar by synchronizing the CUNY blackboard.
+            Because this project target for students, a simple and convenient communication page is necessary. Therefore, classrooms post a place
+             for students communicating with each other. The system will automatically create a classroom based on the information synchronized from
+              the blackboard, or user can create a classroom by themselves.  </h4>
             </p>
             <div class="img_work">
-                <img src="images/default.jpeg" alt="default">
+                <img src="images/2021-12-19 14.07.47.png" alt="default">
             </div>
         </section>
     </section>
